--- a/css_all/lss7.css
+++ b/css_all/lss7.css
@@ -1,93 +1,36 @@
-* {
-    padding: 0px;
-    margin: 0px auto;
-    font-family: sans-serif;
-    box-sizing: border-box;
-}
-.container {
-    width: 100%;
-    max-width: 1140px;
-    padding-bottom: 30px;
-    background-color: rgb(247, 238, 202);
-}
-.col-6 {
-    float: left;
-    width: 50%;
-}
-
-.input-box1 {
-    margin-left: 0px;
-    padding: 20px;
-    padding: 20px; 
-}
- 
-.input-box1 input[type='text'],
-.input-box2 input[type='text'],
-.input-box3 input[type='text'],
-.input-box4 input[type='text'],
-input[type="password"]
- {
-    padding: 7.5px 15px;
-    margin-bottom: 20px;
-    width: 100%;
-    border: 1px solid #cccccc;
-    font-size: 16px;
+       
+  .dropdown {
+    position: relative;
     display: inline-block;
-    height: 40px;
-    border-radius: 5px;
-}
-.input-box2 {
-    margin-left: 35px;
-    padding-top: 20px;
-    margin-right: 35px;
-}
+  }
+  
+  .dropdown-content {
+    display: none;
+    position: absolute;
+    background-color: rgb(93, 111, 107);
+    width: 100px;
+  }
+  
+  .dropdown-content a {
+    color: black;
+    padding: 20px;
+    text-decoration: none;
+    display: block;
+    color: white;
+    text-align: center;
+    padding:20px;
+  }
+  
+  .dropdown-content a:hover {
+    background-color: #e1e9b6
+ }
+  
+  .dropdown:hover .dropdown-content {
+    display: block;
+  }
 
-.input-box3 {
-    margin-left: 35px;
-    margin-right: 35px;
-}
-.input-box4 {
-    margin-left: 0px;
-    margin-right:20px;
-}
-.input-box5 {
-    margin-left: 35px;
-}
-
-
-.clearfix::after {
+  .clearfix::after {
     content: "";
     display: table;
     clear: both;
-}
-.input-box4 {
-    margin-left: 20px;
-}
-a.button {
-    color: white;
-    text-decoration: none; /*gach chan bo di khi dua chuot vao*/
-    cursor:default; /*con chuot chuyen che do khong bam duoc*/
-}
-button {
-    text-decoration: none;
-    border: 5px solid none;
-    background-color: rgb(58, 15, 247);
-    padding: 15px 25px;
-    border-radius: 10px;
-    margin-left: 30px;
-    width: 120px;
-    display: inline-block;
-    text-align: center;
-    transition: all 0.2s;
-    color: white;
-   
-}
-
-[disabled] {
-    background-color: #999;
-}
-/*button:hover, 
-button:active {
-    background-color: rgb(52, 104, 235);
-    color: rgb(250, 251, 253);
-}*/
+  }
