--- a/Lesson10/lesson10.css
+++ b/Lesson10/lesson10.css
@@ -1,3 +1,97 @@
 .sale-off {
     text-decoration: line-through; 
 }
+
+.cart {
+    color: white;
+    font-size: 20px;
+    margin-right: 20px;
+    cursor: pointer;
+
+}
+
+.cart-number {
+    color: white;
+    font-size: 13px;
+    position: relative;
+    top: -14px;
+    left: 25px;
+    border-radius: 3px;
+    background-color: red;
+}
+
+#showcart {
+    position:fixed;
+    border-radius: 10px;
+    padding: 10px;
+    top: 100px;
+    right: 500px;
+    background-color:rgb(192, 233, 126);
+    border: 2px rgb(4, 3, 3) solid;
+    text-align: center;
+    float: left;
+}
+.close {
+    cursor: pointer;
+    }
+
+#showcart img {
+    width: 150px;
+}
+
+table, th, td {
+    border: 1px solid black;
+    text-align: center;
+}
+
+.btn {
+    float: left;
+    width: 70px;
+}
+.form-control {
+    float: right;
+    width: 140px;
+}
+
+#snackbar {
+    visibility: hidden;
+    min-width: 250px;
+    margin-left: -125px;
+    background-color: #333;
+    color: #fff;
+    text-align: center;
+    border-radius: 2px;
+    padding: 16px;
+    position: fixed;
+    z-index: 1;
+    left: 50%;
+    bottom: 30px;
+    font-size: 17px;
+  }
+  
+  #snackbar.show {
+    visibility: visible;
+    -webkit-animation: fadein 0.5s, fadeout 0.5s 2.5s;
+    animation: fadein 0.5s, fadeout 0.5s 2.5s;
+  }
+  
+  @-webkit-keyframes fadein {
+    from {bottom: 0; opacity: 0;} 
+    to {bottom: 30px; opacity: 1;}
+  }
+  
+  @keyframes fadein {
+    from {bottom: 0; opacity: 0;}
+    to {bottom: 30px; opacity: 1;}
+  }
+  
+  @-webkit-keyframes fadeout {
+    from {bottom: 30px; opacity: 1;} 
+    to {bottom: 0; opacity: 0;}
+  }
+  
+  @keyframes fadeout {
+    from {bottom: 30px; opacity: 1;}
+    to {bottom: 0; opacity: 0;}
+  }
+
